conformance/tests/httproute-external-auth-http-request-headers-to-auth.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: external-auth-http-request-headers-to-auth
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: same-namespace
  rules:
  - filters:
    - type: ExternalAuth
      externalAuth:
        protocol: HTTP
        backendRef:
          name: external-auth-http
          port: 9002
        http:
          allowedHeaders:
          - X-Test-Header
          allowedResponseHeaders:
          - X-Auth-Received-Test-Header
    backendRefs:
    - name: infra-backend-v1
      port: 8080
